--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,9 @@
     "[json]": {
         "editor.formatOnSave": false
     },
-    "clangd.arguments": [
-        "--header-insertion=never"
-    ]
+    // "[c]": {
+    //     "editor.formatOnSave": false
+    // },
+    "clangd.arguments": ["--header-insertion=never"],
+    "cmake.configureOnOpen": false
 }
